--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,6 +9,22 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.16.4/lodash.min.js"></script>
 
+    <script type="text/javascript" src="js/libs/three.min.js"></script>
+
+    <!-- extra for now -->
+    <script src="js/libs/threejs/shaders/CopyShader.js"></script>
+	<script src="js/libs/threejs/shaders/LuminosityShader.js"></script>
+	<script src="js/libs/threejs/shaders/ConvolutionShader.js"></script>
+	<script src="js/libs/threejs/shaders/ToneMapShader.js"></script>
+	<script src="js/libs/threejs/shaders/GammaCorrectionShader.js"></script>
+
+	<script src="js/libs/threejs/postprocessing/EffectComposer.js"></script>
+	<script src="js/libs/threejs/postprocessing/RenderPass.js"></script>
+	<script src="js/libs/threejs/postprocessing/MaskPass.js"></script>
+	<script src="js/libs/threejs/postprocessing/ShaderPass.js"></script>
+	<script src="js/libs/threejs/postprocessing/BloomPass.js"></script>
+	<script src="js/libs/threejs/postprocessing/AdaptiveToneMappingPass.js"></script>
+
     <script type="text/javascript" src="js/game.js"></script>
 </body>
 </html>
