--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,10 @@
 </head>
 <body>
 	Simple App Written in ES6
-	
+
+	<!-- React component go here -->
+	<div id="react-hello"/>
+
 	<!-- jquery and lodash is optional -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.16.4/lodash.min.js"></script>
