--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.16.4/lodash.min.js"></script>
 
-    <script type="text/javascript" src="js/libs/three.min.js"></script>
+    <!--<script type="text/javascript" src="js/libs/three.min.js"></script>-->
 
     <!-- extra for now -->
     <script src="js/libs/threejs/shaders/CopyShader.js"></script>
