commited more React, start using Sass as well

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-    <title>Hello-ES6</title>
+	<title>Hello-ES6</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
 	Simple App Written in ES6
