--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Hello-ES6</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<!--<link rel="stylesheet" type="text/css" href="css/main.css" /> -->
 </head>
 <body>
 	Simple App Written in ES6
@@ -13,10 +13,11 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.16.4/lodash.min.js"></script>
 
-    <script type="text/javascript" src="js/libs/three.min.js"></script>
+    <!-- <script type="text/javascript" src="js/libs/three.min.js"></script> -->
+	<script type="text/javascript" src="js/vendor.js"></script>
 
     <!-- extra for now -->
-    <script src="js/libs/threejs/shaders/CopyShader.js"></script>
+   <!-- <script src="js/libs/threejs/shaders/CopyShader.js"></script>
 	<script src="js/libs/threejs/shaders/LuminosityShader.js"></script>
 	<script src="js/libs/threejs/shaders/ConvolutionShader.js"></script>
 	<script src="js/libs/threejs/shaders/ToneMapShader.js"></script>
@@ -27,7 +28,7 @@
 	<script src="js/libs/threejs/postprocessing/MaskPass.js"></script>
 	<script src="js/libs/threejs/postprocessing/ShaderPass.js"></script>
 	<script src="js/libs/threejs/postprocessing/BloomPass.js"></script>
-	<script src="js/libs/threejs/postprocessing/AdaptiveToneMappingPass.js"></script>
+	<script src="js/libs/threejs/postprocessing/AdaptiveToneMappingPass.js"></script> -->
 
     <script type="text/javascript" src="js/game.js"></script>
 </body>
